JumpScript/tests/baselines/reference/numericIndexExpressions.errors.txt
tests/cases/compiler/numericIndexExpressions.jump(10,1): error TS2322: Type '4' is not assignable to type 'string'.
tests/cases/compiler/numericIndexExpressions.jump(11,1): error TS2322: Type '4' is not assignable to type 'string'.
tests/cases/compiler/numericIndexExpressions.jump(14,1): error TS2322: Type '4' is not assignable to type 'string'.
tests/cases/compiler/numericIndexExpressions.jump(15,1): error TS2322: Type '4' is not assignable to type 'string'.


==== tests/cases/compiler/numericIndexExpressions.jump (4 errors) ====
    interface Numbers1 {
        1: string;
    }
    interface Strings1 {
        '1': string;
    }
     
     
    var x: Numbers1;
    x[1] = 4; // error
    ~~~~
!!! error TS2322: Type '4' is not assignable to type 'string'.
    x['1'] = 4; // error
    ~~~~~~
!!! error TS2322: Type '4' is not assignable to type 'string'.
    
    var y: Strings1;
    y['1'] = 4; // should be error
    ~~~~~~
!!! error TS2322: Type '4' is not assignable to type 'string'.
    y[1] = 4; // should be error
    ~~~~
!!! error TS2322: Type '4' is not assignable to type 'string'.